--- a/web.config
+++ b/web.config
@@ -3,7 +3,15 @@
     <system.webServer>
         <defaultDocument>
             <files>
+                <clear />
+                <add value="index.html" />
+                <add value="index.aspx" />
                 <add value="index.asp" />
+                <add value="Default.htm" />
+                <add value="Default.asp" />
+                <add value="index.htm" />
+                <add value="iisstart.htm" />
+                <add value="default.aspx" />
             </files>
         </defaultDocument>
         <httpErrors errorMode="Custom">
